@@ -6,6 +6,8 @@ Version 1.3.14+svn:
   * Language and translations
     * Updated translations: Chinese, Danish, Dutch, French, Italian, Lithuanian,
       Spanish.
+ * user interface:
+   * Made ESC clear hotkey when changing hotkeys
 
 Version 1.3.14:
   * Campaigns
